force-app/main/default/objects/Form_Field__c/fields/Field_Number__c.field-meta.xml
<CustomField>
    <fullName>Field_Number__c</fullName>
    <label>Field Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>