force-app/main/default/objects/Form_Field__c/fields/Field_Section__c.field-meta.xml
<CustomField>
    <fullName>Field_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Section</label>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Section Fields</relationshipLabel>
    <relationshipName>Section_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>