force-app/main/default/objects/Form_Field__c/fields/Field_Validation_Regex__c.field-meta.xml
<CustomField>
    <fullName>Field_Validation_Regex__c</fullName>
    <label>Field Validation Regex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>