force-app/main/default/objects/Form_Field__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>